Fix background-color not covering the whole page

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@
     src: url(../fonts/sriracha-regular-webfont.woff)
 }
 
+/* * {
+    outline: dashed red;
+} */
+
+
 :root {
     --color-light: #ffedd5;
     --color-medium: #f97316;
@@ -31,15 +36,24 @@
 }
 
 body {
-    height: 100vh;
+    position: relative;
     display: grid;
-    grid-template-rows: 2fr 20fr 1fr;
     background-color: var(--color-light);
 }
 
-/* * {
-    outline: dashed red;
-} */
+#page-body {
+    display: grid;
+    height: 100vh;
+    grid-template-rows: 2fr 20fr 1fr;
+    
+}
+
+
+#page-body.greyout {
+    opacity: 0.5;
+    -webkit-animation: fadeOutBackground 1s;
+    animation: fadeOutBackground 1s;
+}
 
 #title-section {
     display: flex;
@@ -53,7 +67,7 @@ body {
     font-size: 4rem;
     text-align: center;
     font-weight: bold;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.3rem;
     text-shadow: 1px 1px 2px var(--color-dark);
     color: var(--color-text-header)
 }
@@ -65,6 +79,8 @@ body {
     align-items: center;
     gap: 5px;
     color: var(--color-dark);
+    align-self: end;
+    padding-left: 5px;
 }
 
 
@@ -74,8 +90,12 @@ body {
     display: inline-block;
     width: 60px;
     height: 34px;
+    cursor: pointer;
 }
 
+.inactive-switch{
+    cursor: default;
+}
 .switch input {
     opacity: 0;
     width: 0;
@@ -84,7 +104,6 @@ body {
 
 .slider {
     position: absolute;
-    cursor: pointer;
     top: 0;
     left: 0;
     right: 0;
@@ -190,19 +209,36 @@ main {
     box-shadow: 2px 2px 4px black;
 }
 
-#book-button:hover {
+.active-button:hover {
     background-color: var(--color-contrast-dark);
     color: var(--color-text-book);
     cursor: pointer;
 }
 
-#book-button:active{
+.active-button:active{
     position: relative;
     left: 2px;
     top: 1px;
     box-shadow: 1px 1px 2px black;
 }
 
+body #pop-up{
+    background-color: red;
+    position: absolute;
+    bottom: 25%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    display: none;
+    opacity: 1;
+    height: 300px;
+    width: 300px;
+}
+
+#pop-up.visible-pop-up {
+    display: inline-block;
+    -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
 
 footer {
     margin-top: auto;
@@ -222,3 +258,35 @@ footer {
 #github-logo {
     height: 30px;
 }
+
+
+/* animations */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
+
+
+  @-webkit-keyframes fadeInBackground {
+    from {opacity: 0.5;}
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeInBackground {
+    from {opacity: 0.5;}
+    to {opacity: 1 ;}
+  }
+  @-webkit-keyframes fadeOutBackground {
+    from {opacity: 1;}
+    to {opacity: 0.5;}
+  }
+  
+  @keyframes fadeOutBackground {
+    from {opacity: 1;}
+    to {opacity:0.5 ;}
+  }
